src/test/ui/typeck/issue-46112.stderr
error[E0308]: mismatched types
  --> $DIR/issue-46112.rs:9:21
   |
LL | fn main() { test(Ok(())); }
   |                     ^^ expected enum `Option`, found `()`
   |
   = note:   expected enum `Option<()>`
           found unit type `()`
help: try wrapping the expression in `Some`
   |
LL | fn main() { test(Ok(Some(()))); }
   |                     +++++  +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
